cd fix scrollbar

--- a/styles/FLATBOOTS/theme/custom.css
+++ b/styles/FLATBOOTS/theme/custom.css
@@ -417,8 +417,7 @@ img.smilies {
 
 #shoutbox_content blockquote {
     font-size: 1em;
-    border-left-color: #121314;
-    margin:0;
+    border-left-color: black;
 }
 
 #shoutbox_content button, html input[type=button], input[type=reset], input[type=submit] {
